# otus_cpp_01

./: .travis.yml  CMakeLists.txt  lib.cpp  main.cpp  test_main.cpp
